--- a/IMBO_MAINFRAME/IMBO_MAINFRAME.vcxproj.filters
+++ b/IMBO_MAINFRAME/IMBO_MAINFRAME.vcxproj.filters
@@ -522,6 +522,9 @@
     <Filter Include="1. 소스 파일\00. Singleton\-02. FileIO\PositionInfoManager\PositionInfoData">
       <UniqueIdentifier>{115fb219-8d02-4e0b-acc1-ff9dcf161071}</UniqueIdentifier>
     </Filter>
+    <Filter Include="1. 소스 파일\00. Singleton\-14. SoundManager">
+      <UniqueIdentifier>{42799d93-9a76-4ab2-bba2-5f5b5b9061d9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Light.h">
@@ -917,6 +920,9 @@
     <ClInclude Include="PositionInfoManager.h">
       <Filter>1. 소스 파일\00. Singleton\-02. FileIO\PositionInfoManager</Filter>
     </ClInclude>
+    <ClInclude Include="SoundManager.h">
+      <Filter>1. 소스 파일\00. Singleton\-14. SoundManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Light.cpp">
@@ -1296,6 +1302,9 @@
     </ClCompile>
     <ClCompile Include="PositionInfoManager.cpp">
       <Filter>1. 소스 파일\00. Singleton\-02. FileIO\PositionInfoManager</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundManager.cpp">
+      <Filter>1. 소스 파일\00. Singleton\-14. SoundManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
