--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,90 @@
 /ipch/IMBO_MAINFRAME-1894b7c9
 /x64/Release
 /ipch/IMBO_MAINFRAME-1d3d7ed1
+/IMBO_MAINFRAME/PSWaterSurface.cso
+/IMBO_MAINFRAME/PSWaterPlane.cso
+/IMBO_MAINFRAME/PSWater.cso
+/IMBO_MAINFRAME/PSUI.cso
+/IMBO_MAINFRAME/PSTrail.cso
+/IMBO_MAINFRAME/PSTessPlane.cso
+/IMBO_MAINFRAME/PSTerrain.cso
+/IMBO_MAINFRAME/PSSSRF.cso
+/IMBO_MAINFRAME/PSSpotLight.cso
+/IMBO_MAINFRAME/PSSkyBox.cso
+/IMBO_MAINFRAME/PSRefraction.cso
+/IMBO_MAINFRAME/PSRayTrace.cso
+/IMBO_MAINFRAME/PSPostProcessing.cso
+/IMBO_MAINFRAME/PSPointLight.cso
+/IMBO_MAINFRAME/PSNaviObject.cso
+/IMBO_MAINFRAME/PSInstancing.cso
+/IMBO_MAINFRAME/PSFinalPass.cso
+/IMBO_MAINFRAME/PSEffect.cso
+/IMBO_MAINFRAME/PSDirectionalLight.cso
+/IMBO_MAINFRAME/PSDeferred.cso
+/IMBO_MAINFRAME/PSDefault.cso
+/IMBO_MAINFRAME/PSDebugTexture.cso
+/IMBO_MAINFRAME/PSDebugLight.cso
+/IMBO_MAINFRAME/PSDebugDepthTexture.cso
+/IMBO_MAINFRAME/PSCoordinateSys.cso
+/IMBO_MAINFRAME/PSCombine.cso
+/IMBO_MAINFRAME/PSCapsuleLight.cso
+/IMBO_MAINFRAME/PSBoundingBox.cso
+/IMBO_MAINFRAME/PSBlend.cso
+/IMBO_MAINFRAME/PSAnimationObject.cso
+/IMBO_MAINFRAME/Occlussion.cso
+/IMBO_MAINFRAME/HSWaterSurface.cso
+/IMBO_MAINFRAME/HSWaterPlane.cso
+/IMBO_MAINFRAME/HSTessPlane.cso
+/IMBO_MAINFRAME/HSTerrain.cso
+/IMBO_MAINFRAME/HSSpotLight.cso
+/IMBO_MAINFRAME/HSPointLight.cso
+/IMBO_MAINFRAME/HSCapsuleLight.cso
+/IMBO_MAINFRAME/GSTrail.cso
+/IMBO_MAINFRAME/GSNaviObject.cso
+/IMBO_MAINFRAME/GSEffect.cso
+/IMBO_MAINFRAME/GSDebugTexture.cso
+/IMBO_MAINFRAME/GSDebugDepthTexture.cso
+/IMBO_MAINFRAME/GSBoundingBox.cso
+/IMBO_MAINFRAME/DSWaterSurface.cso
+/IMBO_MAINFRAME/DSWaterPlane.cso
+/IMBO_MAINFRAME/DSTessPlane.cso
+/IMBO_MAINFRAME/DSTerrain.cso
+/IMBO_MAINFRAME/DSSpotLight.cso
+/IMBO_MAINFRAME/DSPointLight.cso
+/IMBO_MAINFRAME/DSCapsuleLight.cso
+/IMBO_MAINFRAME/CSVerticalBlur.cso
+/IMBO_MAINFRAME/CSSSAOCompute.cso
+/IMBO_MAINFRAME/CSHorizontalBlur.cso
+/IMBO_MAINFRAME/CSDownScaleSecondPass.cso
+/IMBO_MAINFRAME/CSDownScaleFirstPass.cso
+/IMBO_MAINFRAME/CSBloom.cso
+/IMBO_MAINFRAME/CSAONormalDepthDownScale.cso
+/IMBO_MAINFRAME/VSWaterSurface.cso
+/IMBO_MAINFRAME/VSWaterPlane.cso
+/IMBO_MAINFRAME/VSWater.cso
+/IMBO_MAINFRAME/VSUI.cso
+/IMBO_MAINFRAME/VSTrail.cso
+/IMBO_MAINFRAME/VSTessPlane.cso
+/IMBO_MAINFRAME/VSTerrain.cso
+/IMBO_MAINFRAME/VSSSRF.cso
+/IMBO_MAINFRAME/VSSpotLight.cso
+/IMBO_MAINFRAME/VSSkyBox.cso
+/IMBO_MAINFRAME/VSRefraction.cso
+/IMBO_MAINFRAME/VSRayTrace.cso
+/IMBO_MAINFRAME/VSPostProcessing.cso
+/IMBO_MAINFRAME/VSPointLight.cso
+/IMBO_MAINFRAME/VSNaviObject.cso
+/IMBO_MAINFRAME/VSInctancing.cso
+/IMBO_MAINFRAME/VSFinalPass.cso
+/IMBO_MAINFRAME/VSEffect.cso
+/IMBO_MAINFRAME/VSDirectionalLight.cso
+/IMBO_MAINFRAME/VSDeferred.cso
+/IMBO_MAINFRAME/VSDefault.cso
+/IMBO_MAINFRAME/VSDebugTexture.cso
+/IMBO_MAINFRAME/VSDebugDepthTexture.cso
+/IMBO_MAINFRAME/VSCoordinateSys.cso
+/IMBO_MAINFRAME/VSCombine.cso
+/IMBO_MAINFRAME/VSCapsuleLight.cso
+/IMBO_MAINFRAME/VSBoundingBox.cso
+/IMBO_MAINFRAME/VSBlend.cso
+/IMBO_MAINFRAME/VSAnimationObject.cso
